add last result

--- a/project.html
+++ b/project.html
@@ -107,7 +107,9 @@
                 </div>
             </header> <!--header-->
             <main class="main">
-                <section class="screen screen--black screen--project-start" data-class="white" style="background: url(./assets/image/project/Component73.jpg);">
+                <section class="screen screen--black screen--project-start" data-class="white" style="background: url(./assets/image/recording_Trim.gif); background-position: center;
+                background-repeat: no-repeat;
+                background-size: contain;">
                     <div class="screen__box-shadow"></div>
                     <div class="container">
                         <div class="screen__wrapper">
@@ -172,38 +174,75 @@
                                     <div class="block-name__line">
 
                                     </div>
-                                    <span class="block-name__title">our BEGINNING</span>
+                                    <span class="block-name__title">About project</span>
                                 </div>
                                 <div class="block-content">
+                                    <h3 class="block-content__title-mob">Our work</h3>
                                     <div class="block-content__desc">
-                                        Marrix Power embodies a team of specialists committed to delivering exceptional work that goes beyond mere monetary compensation—it's about doing what they excel at and love. Our passion for action is what propels us forward. We embrace an enduring faith in our team, recognizing that without it, none of our achievements would be possible. That's why we are steadfastly dedicated to the ongoing development of our team, fostering its continuous expansion in both breadth and depth.
+                                        <p>
+                                            In our collaboration with Hinderer & Wolff, we embarked on the creation of an interactive online presence. We conceptualized a unique website distinguished by an exceptional design implemented through the innovative Free.js technology. This advanced framework not only ensures a visually striking and user-friendly interface but also facilitates a seamless and engaging online experience for visitors exploring the world of Hinderer & Wolff wines.
+                                        </p>
+                                        <p>
+                                            The integration of Free.js stands as a testament to our commitment to leveraging cutting-edge technologies, enhancing the overall aesthetic and functionality of the website. The result is a platform that beautifully encapsulates the essence of Hinderer & Wolff's legacy and their modern approach to winemaking.
+                                        </p>
+                                        <p>
+                                            In the development process, we utilized Three.js technology, complemented by tools such as Figma, Adobe After Effects, Canva, and ClickUp.
+                                        </p>
                                     </div>
                                     <div class="block-content__items">
                                         <div class="block-content__item">
-                                            <div class="block-content__item-number">
-                                                1
+                                            <div class="block-content__item-title">
+                                                Technologies
                                             </div>
-                                            <div class="block-content__item-text">
-                                                Founder dedicated his life to be making impact through software solutions
-                                            </div>
-                                        </div>
-                                        <div class="block-content__item">
-                                            <div class="block-content__item-number">
-                                                30+
-                                            </div>
-                                            <div class="block-content__item-text">
-                                                FULL-TIME SPECIALISTS
-                                            </div>
-                                        </div>
-                                        <div class="block-content__item">
-                                            <div class="block-content__item-number">
-                                                8
-                                            </div>
-                                            <div class="block-content__item-text">
-                                                years of commercial experience
-                                            </div>
-                                        </div>
+                                            <ul class="block-content__item-list">
+                                                <li>
 
+                                                    <img class="block-content__item-desctop" src="./assets/image/project/project_tech/tech_1.svg" alt="tech_1">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tech_1.svg" alt="tech_1">
+                                                </li>
+                                                <li>
+                                                    <img class="block-content__item-desctop" src="./assets/image/project/project_tech/tech_2svg.svg" alt="tech_2">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tech_2.svg" alt="tech_2">
+                                                </li>
+                                                <li>
+                                                    <img class="block-content__item-desctop" src="./assets/image/project/project_tech/tech_3.svg" alt="tech_3">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tech_3.svg" alt="tech_3">
+                                                </li>
+                                                <li>
+                                                    <img class="block-content__item-desctop" src="./assets/image/project/project_tech/tech_4.svg" alt="tech_4">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tech_4.svg" alt="tech_4">
+                                                </li>
+                                            </ul>
+                                        </div>
+                                        <div class="block-content__item">
+                                            <div class="block-content__item-title">
+                                                Tools
+                                            </div>
+                                            <ul class="block-content__item-list">
+                                                <li>
+                                                    <img class="block-content__item-desctop" src="./assets/image/project/project_tool/tool_1.svg" alt="tool_1">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tool_1.svg" alt="tool_1">
+                                                </li>
+                                                <li>
+                                                    <img
+                                                    class="block-content__item-desctop"
+                                                    src="./assets/image/project/project_tool/tool_2.svg" alt="tool_2">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tool_2.svg" alt="tool_2">
+                                                </li>
+                                                <li>
+                                                    <img
+                                                    class="block-content__item-desctop"
+                                                    src="./assets/image/project/project_tool/tool_3.svg" alt="tool_1">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tool_3.svg" alt="tool_3">
+                                                </li>
+                                                <li>
+                                                    <img
+                                                    class="block-content__item-desctop"
+                                                    src="./assets/image/project/project_tool/tool_4.svg" alt="tool_1">
+                                                    <img class="block-content__item-mobile" class="" src="./assets/image/project/mob_icon/tool_4.svg" alt="tool_4">
+                                                </li>
+                                            </ul>
+                                        </div>
                                     </div>
 
                                 </div>
@@ -211,19 +250,39 @@
                         </div>
                     </div> <!--container-->
                 </section> <!--services-->
-                <section class="screen screen--white screen--project-baner" data-class="white" style="background: url(./assets/image/about_banner.jpg);">
+                <section class="screen screen--black screen--project-achievement" data-class="white" >
                     <div class="container">
                         <div class="screen__wrapper">
                             <div class="screen__wrapper-body">
+                                <div class="block-name">
+                                    <div class="block-name__line">
 
+                                    </div>
+                                    <span class="block-name__title">Unique Achievement</span>
+                                </div>
                                 <div class="block-content">
-                                    <h3 class="block-content__title">Code the future, change the world. </h3>
+                                    <div class="block-content__col block-content__col--left">
+                                        <div class="block-content__article">
+
+                                            <p>In our collaboration with HINDERER & WOLFF, our focus extended beyond the traditional. Tasked with the unique challenge of seamlessly transitioning the brand's legacy to the mobile platform, we not only tailored our approach to meet specific needs but also delivered results beyond the ordinary.</p>
+                                            <p>The primary goal was clear: create a mobile version of the HINDERER & WOLFF website that encapsulates the brand's rich heritage while ensuring an intuitive and engaging user experience on iOS devices.</p>
+                                            <p>
+                                                This distinctive achievement not only met but exceeded expectations, showcasing our commitment to pushing boundaries and providing users with a mobile journey that mirrors the excellence of HINDERER & WOLFF's online presence.
+                                            </p>
+                                        </div>
+                                        <div class="block-content__article-date">Year: 2022</div>
+                                    </div>
+                                    <div class="block-content__col block-content__col--right">
+                                        <div class="block-content__project-prew">
+                                            <img src="./assets/image/recording_Trim.gif" alt="">
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div> <!--container-->
                 </section> <!--services-->
-                <section class="screen screen--black screen--information" data-class="white">
+                <section class="screen screen--black screen--information screen--information-project" data-class="white">
                     <div class="screen__box-shadow"></div>
                     <div class="embet">
                         <div class="block-name">
@@ -246,7 +305,7 @@
                                                     <button type="button"
 
                                                     >
-                                                        Joining our team
+                                                    Get special access
                                                     </button>
 
                                                     <span class="block-content-info-button-line"></span>
