add last result

--- a/project.html
+++ b/project.html
@@ -133,6 +133,7 @@
                                 </div>
                                 <div class="block-content">
                                     <h3 class="block-content__title">HINDERER & WOLFF's 16th-Century Wines from the Rebuilt Vineyards of Orshvira</h3>
+                                    <h3 class="block-content__title-mob">The family vineyard of HINDERER & WOLFF continues these traditions</h3>
                                     <div class="block-content__text">
                                         <p>In the aftermath of the devastating events that befell Orshvira in the year 1375, the resilient inhabitants committed themselves to the formidable task of rebuilding.</p>
                                         <p>
@@ -140,6 +141,13 @@
                                         </p>
                                         <p>
                                         Their wines, sourced from an ecologically pure estate, are delicate, displaying astonishing taste complexity and exceptional longevity.
+                                        </p>
+                                    </div>
+                                    <div class="block-content__text-mob">
+                                        <p>After the complete devastation of Orshvira in the year 1375, its resilient inhabitants undertook the arduous task of rebuilding, eventually cultivating exceptional 16th-century wines highly esteemed by the church.</p>
+                                        <p>Since then, this precious savoir-faire has been passed down through generations. The family vineyard of HINDERER & WOLFF (brother, sister, and spouses) continues these traditions, infusing a touch of modernity. </p>
+                                        <p>
+                                            Their wines, sourced from an ecologically pure estate, are delicate, displaying astonishing taste complexity and exceptional longevity!
                                         </p>
                                     </div>
                                 </div>
@@ -184,6 +192,17 @@
                                         </p>
                                         <p>
                                             The integration of Free.js stands as a testament to our commitment to leveraging cutting-edge technologies, enhancing the overall aesthetic and functionality of the website. The result is a platform that beautifully encapsulates the essence of Hinderer & Wolff's legacy and their modern approach to winemaking.
+                                        </p>
+                                        <p>
+                                            In the development process, we utilized Three.js technology, complemented by tools such as Figma, Adobe After Effects, Canva, and ClickUp.
+                                        </p>
+                                    </div>
+                                    <div class="block-content__desc-mob">
+                                        <p>
+                                            We embarked on the creation of an interactive online presence for Hinderer & Wolff, conceiving a unique website characterized by an exceptional design implemented through the innovative Free.js technology. This advanced framework not only ensures a visually striking and user-friendly interface but also enables a seamless and engaging online experience for visitors exploring the world of Hinderer & Wolff wines.
+                                        </p>
+                                        <p>
+                                            The integration of Free.js reflects our commitment to leveraging cutting-edge technologies to enhance the overall aesthetic and functionality of the website, providing a platform that beautifully encapsulates the essence of Hinderer & Wolff's legacy and modern approach to winemaking.
                                         </p>
                                         <p>
                                             In the development process, we utilized Three.js technology, complemented by tools such as Figma, Adobe After Effects, Canva, and ClickUp.
@@ -269,6 +288,41 @@
                                             <p>
                                                 This distinctive achievement not only met but exceeded expectations, showcasing our commitment to pushing boundaries and providing users with a mobile journey that mirrors the excellence of HINDERER & WOLFF's online presence.
                                             </p>
+                                        </div>
+                                        <div class="block-content__article-mob">
+                                            <p>In today's world, more and more people use mobile devices to access the internet. Therefore, mobile project adaptation is one of the most important stages in its development.
+                                                Our studio pays special attention to mobile project adaptation. We use modern technologies and approaches to create websites and applications that look and work great on all devices.
+                                            </p>
+                                            <p>
+                                                When creating mobile project adaptation, we consider the following factors:
+
+                                            </p>
+                                            <ol>
+                                                <li>Device screen size</li>
+                                                <li>Device screen resolution</li>
+                                                <li>Device type (smartphone, tablet, laptop)</li>
+                                                <li> Device OS</li>
+                                            </ol>
+
+                                            <p>
+                                                As a result, our projects provide users with a convenient and comfortable experience on any device.
+                                            </p>
+
+                                            <p>
+                                                Benefits of mobile project adaptation:
+
+                                            </p>
+                                            <ol>
+                                                <li>Increased accessibility of the project for mobile device users</li>
+                                                <li>Improved project conversion</li>
+                                                <li> Increased traffic to the project</li>
+                                            </ol>
+
+                                            <p>
+                                                Contact us to learn more about our mobile project adaptation services.
+                                            </p>
+
+
                                         </div>
                                         <div class="block-content__article-date">Year: 2022</div>
                                     </div>
